/*
 * Copyright 2026 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Adapted from http://google3/google/firebase/dataconnect/v1main/graphql_response_extensions.proto;rcl=862799178

syntax = "proto3";

package google.firebase.dataconnect.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

option java_package = "google.firebase.dataconnect.proto";
option java_multiple_files = true;

message GraphqlResponseExtensions {
  message DataConnectProperties {
    google.protobuf.ListValue path = 1;
    string entity_id = 2;
    repeated string entity_ids = 3;
    google.protobuf.Duration max_age = 4;
  }

  repeated DataConnectProperties data_connect = 1;
}
